fixed errors and knitted document

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -322,7 +322,7 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
    DOI = {10.1111/j.1469-8986.1986.tb00676.x},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/3809364
 https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=nlm%3Apubmed},
-   year = {1986}
+   year = {1986},
 }
 
 @article{Gaertner2021,
@@ -330,7 +330,7 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    title = {Individual differences in inhibitory control are not related to emotion regulation},
    journal = {PsyArXiv},
    DOI = {10.31234/osf.io/cd8rx},
-   year = {2021}
+   year = {2021},
 }
 
 @article{Gonzalez-Garcia2021,
@@ -344,8 +344,9 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
 0340-0727 (Linking)},
    DOI = {10.1007/s00426-020-01300-9},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/32036442},
-   year = {2021}
+   year = {2021},
 }
+
 @Article{Greiner2015,
   author     = {Greiner, Ben},
   journal    = {Journal of the Economic Science Association},
@@ -375,7 +376,7 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
 0022-3514 (Linking)},
    DOI = {10.1037/0022-3514.74.1.224},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/9457784},
-   year = {1998}
+   year = {1998},
 }
 
 @article{Gross1998emerging,
@@ -388,7 +389,7 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    ISSN = {1939-1552
 1089-2680},
    DOI = {10.1037/1089-2680.2.3.271},
-   year = {1998}
+   year = {1998},
 }
 
 @article{Gross2015,
@@ -401,7 +402,7 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    ISSN = {1047-840x},
    DOI = {10.1080/1047840x.2014.940781},
    url = {<Go to ISI>://WOS:000350648700001},
-   year = {2015}
+   year = {2015},
 }
 
 @article{GrossJohn2003,
