--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -383,7 +383,7 @@ Then, they will complete an effort discounting (ED) procedure regarding the n-ba
 The second session will take place exactly one week after session one.
 Participants will provide informed consent and receive written instructions on the ER paradigm and ER strategies that they should apply.
 A brief training will ensure that all participants are able to implement the ER strategies.
-Next, electrodes to measure facial EMG will be attached and the ER paradigm will be conducted, followed by an ED procedure regarding the ER strategies.
+Next, electrodes to measure facial EMG will be attached and the ER task will be conducted, followed by an ED procedure regarding the ER strategies.
 After that, participants will choose one ER strategy to repeat one more time.
 Study data will be collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden\textsuperscript{42,43}.
 
@@ -501,7 +501,7 @@ EMG data of subjects will be excluded from analysis if errors occured during rec
 No further data exclusions are planned.
 The level of significance will be set to \(\alpha=.05\).
 For hypotheses H1-4, repeated measures analysis of variance (rmANOVA) will be conducted and estimated marginal means will be computed using the \emph{afex} package\textsuperscript{39}.
-Greenhouse-Geisser-corrected degrees of freedom and associated \(p\)-values and will be reported when the assumption of sphericity is violated.
+Greenhouse-Geisser-corrected degrees of freedom and associated \(p\)-values will be reported when the assumption of sphericity is violated.
 If the within-subjects factor of interest is significant, pairwise contrasts will be calculated using Bonferroni adjustment for multiple testing.
 Proportion of explained variance \(\eta_{p}^{2}\) will be reported as a measure of effect size.
 
@@ -515,7 +515,7 @@ To examine the effects of the three ER strategies on physiological responding (H
 To examine the effect of ER strategies on subjective effort (H4a), a rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for subjective effort ratings will be conducted.
 
 \emph{Subjective values of emotion regulation strategies.} For each ER strategy, SVs will be calculated as follows: first, the value 0.02 € will be added to or subtracted from the last monetary value of the flexible strategy, depending on the participant's last choice.
-Second, the resulting monetary value will be divided by 2.00 € to arrive at the SV of the opposite strategy in each pairing.
+Second, to obtain the SV of the fixed strategy (the minimum relative reward required for participants to choose the flexible over the fixed strategy), the last value of the flexible strategy will be divided by 2 €.
 Therefore, the SVs of the flexible strategies are 1, because they were chosen in the initial comparison of each pairing in which the same value was offered for both strategies, so they are the preferred strategy of each pairing.
 The SVs of the fixed strategies lay between 0 and 1, with lower values indicating that the participant would need a much higher monetary incentive to choose this strategy over the other one in the pairing.
 The final SV per strategy for each participant will be computed by averaging the SVs of each strategy across pairings.
