--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -227,7 +227,7 @@ In the first session, participants provide informed consent and demographic data
 The paradigm starts with the *n*-back levels one to four, presented sequentially with two runs per level, consisting of 64 consonants (16 targets, 48 non-targets) per run.
 The levels are referred to by color (1-back black, 2-back red, 3-back blue, 4-back green) to avoid anchor effects in the effort discounting procedure.
 To assess perceived task load, we will use the 6-item NASA Task Load Index (NASA-TLX)[@Hart1988], where participants evaluate their subjective perception of mental load, physical load, effort, frustration, performance, and time pressure during the task on a 20-point scale.
-At the end of each level, participants fill out the NASA-TLX on a tablet.
+At the end of each level, participants fill out the NASA-TLX on a tablet, plus an item with the same response scale, asking them how aversive they found this *n*-back level.
 After the *n*-back task, participants complete the CAD paradigm on screen and are instructed to do so as realistically as possible, even though the displayed rewards will not be paid out on top of their compensation.
 They are told that one of their choices will be randomly picked for the final run of *n*-back, the data of which will not be analyzed as it only serves to incentivise truthful behavior and stay close to the design of Westbrook [-@Westbrook2013].
 After the CAD paradigm, participants will fill out a short questionnaire on the tablet, indicating whether they have adhered to the instructions (yes/no) and what the primary motivation for their decisions during the effort discounting procedure was (avoid boredom/relax/avoid effort/seek challenge/other).  
@@ -285,13 +285,17 @@ These pipelines specify which transformation was applied (none, log, inverse, or
 The MLM will be run with each of the 63\ pipelines, which will also include our main pipeline (untransformed data, exclusion of RTs below 100\ ms).
 The ratio of pipelines that lead to significant versus non-significant effects will provide an indication of how robust the effect actually is.
 
-The association of effort discounting and NFC will be examined with a regression using the $AUC$ of each participant's SVs to predict their NFC score.
-A second regression will additionally include the mean of the NASA-TLX subscales' $AUCs$ of each participant as a predictor.
-Since we do not have a fixed SV of 1 for 1-back, we cannot apply the computation of Westbrook et al.[-@Westbrook2013], which was the mean of the $AUCs$ of the SVs of each higher n-back level and 1-back, yielding values between 0\ and\ 1.
-Consequently, we will choose a different way of quantifying the individual degree of effort discounting.
-A classic $AUC$ cannot differentiate between a subject who prefers 1-back and a subject who prefers 4-back if the magnitude of the ascent is the same, but it can reflect the overall willingness to exert effort.
-This is the opposite for the sum of the ascent between SVs.
-Therefore, we multiply both indicators, arriving at a value reflecting both degree and direction of preference, called $AxAUC$.
+The association of SVs and NFC will be examined with an rmANOVA.
+We will subtract the SV of 1- from 2-back, 2- from 3-back, and 3- from 4-back per participant, yielding three SV difference scores per participant.
+The sample will be divided into participants with low and high NFC using a median split.
+We will then compute an rmANOVA with the within-factor n-back level and the between-factor NFC group to determine whether there is a main effect of level and/or group, and/or an interaction between level and group on the SV difference scores.
+Post-hoc tests will be computed depending on which effect reaches significance at $p<.01$.
+
+The association of subjective task load with NFC will be examined similarly.
+We will calculate NASA-TLX sum scores per participant per level and compute an rmANOVA with the within-factor n-back level and the between-factor NFC group, and apply post-hoc tests based on which effect reaches significance at $p<.01$.
+And the association of subjective aversiveness of the task with NFC will be examined with difference scores as well, since we expect this curve to mirror the SV curve, i.e. as the SV rises, the aversiveness declines, and vice versa.
+We will subtract the aversiveness ratings of 1- from 2-back, 2- from 3-back, and 3- from 4-back per participant, yielding three aversiveness difference scores per participant.
+Then, we will compute an rmANOVA with the within-factor n-back level and the between-factor NFC group, and apply post-hoc tests based on which effect reaches significance at $p<.01$.
 
 The results of each analysis will be assessed on the basis of both $p$-value and the Bayes factor $BF10$, calculated with the *BayesFactor* package[@Morey2021] using the default prior widths of the functions *anovaBF*, *lmBF* and *regressionBF*.
 We will consider a $BF10$ close to or above 3/10 as moderate/strong evidence for the alternative hypothesis, and a $BF10$ close to or below .33/.10 as moderate/strong evidence for the null hypothesis [@Wetzels2015].
